<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/faq_logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="361dp"
        android:layout_height="131dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/faq_title_image" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_what_Is_vpn"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="370dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_choose_country"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="369dp"
        android:layout_height="37dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_what_we_do"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="368dp"
        android:layout_height="39dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_what_you_can_do"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_download_app"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="367dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:text="@string/faq_config_your_acount"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_question_6"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_6" />

    <!-- Pregunta 1 -->
    <TextView
        android:id="@+id/tv_question_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/qu_es_una_vpn_y_para_qu_sirve"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Pregunta 2 -->
    <TextView
        android:id="@+id/tv_question_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/por_qu_mi_conexi_n_es_m_s_lenta_con_la_vpn"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Pregunta 3 -->
    <TextView
        android:id="@+id/tv_question_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/la_vpn_protege_contra_hackers_y_malware"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Pregunta 4 -->
    <TextView
        android:id="@+id/tv_question_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/puedo_usarla_para_ver_contenido_bloqueado_en_mi_pa_s"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Pregunta 5 -->
    <TextView
        android:id="@+id/tv_question_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/c_mo_instalo_y_configuro_la_vpn_en_mi_dispositivo"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />

    <!-- Pregunta 6 -->
    <TextView
        android:id="@+id/tv_question_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/question_box"
        android:padding="8dp"
        android:text="@string/c_mo_cancelo_mi_suscripci_n_o_actualizo_mi_plan"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintWidth_percent="0.9" />



    <!-- Contenedor para el menú -->
    <FrameLayout
        android:id="@+id/faq_menu_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>