<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Contenedor para el logo -->
    <FrameLayout
        android:id="@+id/fl_mainpage_logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mainpage_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/tv_mainpage_upload_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_upload_num" />

    <TextView
        android:id="@+id/tv_mainpage_upload_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/speed_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/iv_mainpage_upload"
        app:layout_constraintTop_toTopOf="@+id/iv_mainpage_upload" />

    <TextView
        android:id="@+id/tv_mainpage_upload_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:text="@string/speed_units"
        app:layout_constraintStart_toEndOf="@+id/tv_mainpage_upload_num"
        app:layout_constraintTop_toTopOf="@+id/iv_mainpage_upload" />

    <ImageView
        android:id="@+id/iv_mainpage_download"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="116dp"
        android:rotation="90"
        android:contentDescription="@string/download_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/right_arrow" />

    <TextView
        android:id="@+id/tv_mainpage_welcome"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mainpage_welcomeuser"
        android:layout_width="197dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:text="@string/welcome_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_mainpage_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_welcome" />

    <View
        android:id="@+id/dv_mainpage_down_up"
        android:layout_width="2dp"
        android:layout_height="57dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="100dp"
        android:background="#63FF88"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_mainpage_upload"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="116dp"
        android:rotation="270"
        android:contentDescription="@string/upload_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/right_arrow" />

    <TextView
        android:id="@+id/tv_mainpage_download_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/speed_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/iv_mainpage_download"
        app:layout_constraintTop_toTopOf="@+id/iv_mainpage_download" />

    <TextView
        android:id="@+id/tv_mainpage_download_units"
        android:layout_width="32dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:text="@string/speed_units"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/tv_mainpage_download_num"
        app:layout_constraintTop_toTopOf="@+id/tv_mainpage_download_num" />

    <TextView
        android:id="@+id/tv_mainpage_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="@+id/tv_mainpage_download_num"
        app:layout_constraintTop_toBottomOf="@+id/tv_mainpage_download_num" />

    <!-- Contenedor para el menú -->
    <FrameLayout
        android:id="@+id/fl_mainpage_menu_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>