<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".session.RecoverPasswordPage">

    <FrameLayout
        android:id="@+id/fl_recover_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_session_recover_bg"
        android:layout_width="0dp"
        android:layout_height="470dp"
        android:contentDescription="@string/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/color_pink_ffc2f4" />

    <TextView
        android:id="@+id/tv_session_recover_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:labelFor="@id/pt_session_recover_email"
        android:text="@string/login_email_label"
        app:layout_constraintBottom_toTopOf="@+id/pt_session_recover_email"
        app:layout_constraintStart_toStartOf="@+id/pt_session_recover_email" />

    <EditText
        android:id="@+id/pt_session_recover_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_session_recover_bg"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/iv_session_recover_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <CheckBox
        android:id="@+id/cb_session_recover_accept_emails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recover_password_acept_emails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_session_recover_email" />

    <Button
        android:id="@+id/bt_session_recover_submit"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="-25dp"
        android:text="@string/recover_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_session_recover_bg"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_session_recover_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/recover_password_go_to_login"
        android:textColor="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_session_recover_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>
